# DataViz-AI-Impact

./: .gitignore  README.md  pyproject.toml
src/: dashboard_ai_media.py  overview_over_dataset.ipynb
src/ai_dataset/: dashboard_ai_media.py
src/ai_dataset/assets/: custom.css
